Fix broken functions

--- a/css/styles.css
+++ b/css/styles.css
@@ -10830,4 +10830,5 @@ textarea.form-control-lg {
   justify-content: center;
   height: 4rem;
   width: 4rem;
-  font-size: 2rem;}
+  font-size: 2rem;
+}
